# find.bi

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  EXPERIMENT_BLOG.md  IMPLEMENTATION_PLAN.md  Kopia_av_LLM_Workshop.ipynb  PRD.json  PROMPT_Build.md  QUICKSTART.md  README.md  UI_DESCRIPTION.md  check-schema.js  check-user.js  docker-compose.yml  evaluate_loop.ps1  fix-minio-cors.js  loop.bat  loop.ps1  loop.sh  mark-docs-processed.js  mark-documents-processed.sql  nx.json  package.json  private.pem  public.pem  setup-schema.sql  setup_project.ps1  setup_project.sh  test-create-analysis.js  test-db.sql  test-minio.js  tsconfig.base.json
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
CRM/: package-lock.json  tsconfig.tsbuildinfo
RalpFI/: CLAUDE.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  requirements.txt
backend/: README.md  alembic.ini  db.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/api/: auth.py  data.py
backend/services/: duckdb_service.py  schema_service.py
backend/tests/: test_auth_api.py  test_data_export_api.py  test_data_schema_ingest_api.py  test_data_upload_api.py  test_db.py  test_duckdb_service.py  test_health.py  test_schema_service.py
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  migrate-entrypoint.sh  nginx.conf
e2e/: playwright.config.ts  tsconfig.json
frontend/: README.md  package-lock.json  package.json  vite.config.ts
migrations/: 005_create_analysis_nodes_table.sql  007_create_collaboration_tables.sql  008_create_audit_log_table.sql  (+7 more)
(+324 files in other folders)
